--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
     ],
     "require": {},
     "scripts": {
-        "post-install-cmd": []
+        "post-install-cmd": ["echo 'hello !'"]
     }
 }
