--- a/php.ini
+++ b/php.ini
@@ -6,4 +6,4 @@ max_execution_time=6
 session.use_strict_mode=on
 realpath_cache_ttl=3600
 zend.detect_unicode=Off
-session.gc_probability
+session.gc_probability=0
